# fastapi_p21

./: config.py  main.py  pyproject.toml
apps/: admin.py
apps/models/: database.py  products.py
apps/routers/: products.py
profile_/: user-detail.html  user-list.html
templates/: user-detail.html  user-list.html
templates/apps/products/: product-detail.html  product-list.html
